# rust-url-shortner

./: .gitignore  Cargo.toml  Dockerfile  configuration.yaml
.sqlx/: query-2aa596a5ec8e2cd28f0b07fb35983d62ae606ecd10faa3080573d27db91164f8.json  query-481830aab36fe5492093e1f9dfef598796467b44384531d682d0ee925cabf1c2.json  query-c63c10d116f628ebb0a0a41720ce2c22a7ecde443d39d3f9b3299a1f7525b6cf.json  query-e26f4da98576d037fbcc750be86603187980855217a0d538b9f576d429aeda2a.json
configuration/: base.yaml  production.yaml
migrations/: 20251231053417_create_short_urls_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  short_urls.rs
tests/: health_check.rs
