[package]
name = "rust-url-shortner"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "url_shortner"
path = "src/main.rs"

[dependencies]
tokio-macros = "2"
actix-web = "4.12.1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.19"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.10"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"]

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
